--- a/public/style.css
+++ b/public/style.css
@@ -443,7 +443,328 @@ h3{
 	color: red;
 }
 
+/* Genre */
+.course{
+	width: 80%;
+	margin:auto;
+	position: relative;
+	text-align: center;
+	padding-top: 100px;
+}
+
+h1{
+	font-size: 36px;
+	font-weight: 500;
+}
+
+p{
+	color: #777;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 22px;
+	padding: 10px;
+}
+
+.rowgenre{
+	margin-top:3%;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.course-col{
+	flex-basis: 31%;
+	background: #fff3f3;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	padding: 10px 12px;
+	position: relative;
+	overflow: hidden;
+	box-sizing: border-box;
+	transition: 0.5s;
+	
+}
+
+.imagegenre img{
+	width: 100%;
+	border-radius: 30px;
+	height: 53%;
+}
+
+.course-col:hover{
+	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+.textgenre{
+	width: auto;
+	height: auto;
+	position: absolute;
+  	top: 30%;
+  	left: 50%;
+ 	transform: translate(-50%, -50%);
+	text-shadow: 0px 0px 5px white;
+}
+/* crud button */
+
+.crudbutton{
+	padding: 10px;
+	text-align: right;
+	margin-bottom: 50px;
+}
+
+.create {
+	appearance: none;
+	background-color: #2ea44f;
+	border: 1px solid rgba(27, 31, 35, .15);
+	border-radius: 6px;
+	box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+	box-sizing: border-box;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 20px;
+	padding: 6px 16px;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+
+.create:focus:not(:focus-visible):not(.focus-visible) {
+	box-shadow: none;
+	outline: none;
+}
+
+.create:hover {
+	background-color: #2c974b;
+}
+
+.create:focus {
+	box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+	outline: none;
+}
+
+.create:disabled {
+	background-color: #94d3a2;
+	border-color: rgba(27, 31, 35, .1);
+	color: rgba(255, 255, 255, .8);
+	cursor: default;
+}
+
+.create:active {
+	background-color: #298e46;
+	box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.remove {
+	appearance: none;
+	background-color: #bf0a10;
+	border: 1px solid rgba(27, 31, 35, .15);
+	border-radius: 6px;
+	box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+	box-sizing: border-box;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 20px;
+	padding: 6px 16px;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+
+.remove:focus:not(:focus-visible):not(.focus-visible) {
+	box-shadow: none;
+	outline: none;
+}
+
+.remove:hover {
+	background-color: #a81e16;
+}
+
+.remove:focus {
+	box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+	outline: none;
+}
+
+.remove:disabled {
+	background-color: #ff171f;
+	border-color: rgba(27, 31, 35, .1);
+	color: rgba(255, 255, 255, .8);
+	cursor: default;
+}
+
+.remove:active {
+	background-color: #bf0a10;
+	box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+/* novel */
+.novelsec{
+	width: 70%;
+	margin:auto;
+	margin-top: 100px;
+}
+.novellist{
+	border-image: linear-gradient(98deg, gray, white) 1;
+	border-width: 3px;
+	border-style: solid;
+	border-radius: 1em;
+	display: flex;
+	margin-top: 40px;
+}
+.gamnov img{
+	width: 300px;
+}
+.detnov{
+	padding-left: 20px;
+	width: 700px;
+}
+.judnov {
+	padding-top: 20px;
+	padding-left: 20px;
+}
+.judnov h1{
+	text-align: center;
+}
+.gennov {
+	padding: 20px 0px;
+	display: flex;
+}
+.gennov h2{
+	padding-left: 20px;
+	padding-right: 4px;
+	font-weight: 500;
+	border-image: linear-gradient(98deg, gray, white) 1;
+	border-width: 3px;
+	border-style: solid;
+	border-radius: 0.7em;
+}
+.descnov{
+	height: 120px;
+	padding-top: 10px;
+	border-image: linear-gradient(170deg, white, #ebebeb) 1;
+	border-width: 3px;
+	border-style: solid;
+	border-radius: 0.4em;
+}
+.descnov h3{
+	
+}
+.delbutdiv {
+	width: 7%;
+	text-align: right;
+	padding: 10px;
+}
+
+.delbutap {
+	background-color: #EA4C89;
+	border-radius: 8px;
+	border-style: none;
+	box-sizing: border-box;
+	color: #FFFFFF;
+	cursor: pointer;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+	height: 40px;
+	line-height: 20px;
+	list-style: none;
+	margin: 0;
+	outline: none;
+	padding: 10px 16px;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	transition: color 100ms;
+	vertical-align: baseline;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+}
+
+.delbutap:hover,
+.delbutap:focus {
+	background-color: #F082AC;
+}
+
+
+
+/* popular */
+.layerpop {
+	background: transparent;
+	height: 73.7%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-image: transparent(45deg, blue, aqua);
+  	z-index: 2;
+}
+
+.layerpop::before {
+	border-radius: 10px;
+	position: absolute;
+  	content: "";
+  	top: 0;
+  	right: 0;
+  	bottom: 0;
+  	left: 0;
+    background-image: linear-gradient(to bottom, transparent, #f9d9ff);
+  	z-index: 1;
+  	opacity: 0;
+  	transition: opacity 0.4s linear;
+}
+
+.layerpop:hover::before {
+  opacity: 0.8;
+}
+
+.layerpop h3{
+	width: 100%;
+	font-weight: 500;
+	text-shadow: 1px 1px 4px red; 
+	color: #fff;
+	font-size: 26px;
+	bottom: 0;
+	left: 80%;
+	transform: translateX(-80%);
+	position: absolute;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+.layerpop:hover h3{
+	bottom: 55%;
+	opacity: 1;
+}
+
 /* contact about us */
+/* referensi */
+.referensi{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	padding-top: 50px;
+}
+
+
+/* Contributor */
 .bawahcon2-col{
 	flex-basis: 40%;
 	border-radius: 10px;
@@ -457,12 +778,13 @@ h3{
 	width:80%;
 	align-content: center;
 	display: block;
+	border-radius: 40px;
 }
 .con1 {
-	
 	width:80%;
 	position: right;
 	display: block;
+	border-radius: 40px;
 }
 .bawahcon1-col img{
 	width:80%;
@@ -481,11 +803,12 @@ h3{
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-image: transparent(45deg, blue, aqua);
   	z-index: 2;
+	background-image: linear-gradient(to bottom, transparent 60%, #fff);
 }
 
 .layer2::before {
+	border-radius: 40px;
 	padding: 0 20px 0 120px;
 	position: absolute;
   	content: "";
@@ -501,7 +824,34 @@ h3{
 }
 
 .layer2:hover::before {
-	padding: 0 20px 0 120px;
+	padding: 0 20px 0 20px;
   	opacity: 0.8;
 	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+/* social media  */
+.sosmed{
+	display: flex;
+	justify-content: space-between;
+}
+.sosicon{
+	flex-basis: 50%;
+	padding: 0 20px 0 220px;
+	position: relative;
+	overflow: hidden;
+	box-sizing: border-box;
+}
+.sosicon a{
+	font-size: 30px;
+	color: black;
+}
+.sosicon2{
+	flex-basis: 50%;
+	padding: 0 220px 0 20px;
+	position: relative;
+	overflow: hidden;
+	box-sizing: border-box;
+}
+.sosicon2 a{
+	font-size: 30px;
+	color: black;
 }
